(fix - mobile) 1) Changed "html" tag height to "100%" for correct note content scrolling. 2) Removed "overflow: hidden" for "pull-to-refresh" feature.

--- a/src/assets/styles/common/common.scss
+++ b/src/assets/styles/common/common.scss
@@ -1,10 +1,5 @@
-html {
-  height: 100vh;
-  overflow: hidden;
-}
-
+html,
 body,
 #root {
   height: 100%;
-  overflow: hidden;
 }
